Add blog module

--- a/_layouts/base.html.haml
+++ b/_layouts/base.html.haml
@@ -15,7 +15,7 @@
           %a.brand{ :href=>"/" } Les Cast Codeurs Podcast
           %ul.nav
             %li
-              %a{ :href=>"/" } Accueil
+              %a{ :href=>"/" } Podcasts
             %li
               %a{ :href=>"/equipe" } L'équipe
             %li
