--- a/index.html.haml
+++ b/index.html.haml
@@ -1,4 +1,5 @@
 ---
+title: Podcasts
 layout: default
 ---
 .prominent-box
@@ -26,20 +27,21 @@ layout: default
     %strong
       Vincent Massol 
     (XWiki, Maven).
-.row
-  .span4
-    %h2 About
-    %p Awestruct is a framework for creating static HTML sites. It's inspired by the awesome Jekyll utility in the same genre.
-    %p Additionally, Awestruct integrates technologies such as Compass, Markdown and Haml.
+%hr
+- for post in page.posts
+  .blogpost
+    %h2
+      %a{:href=>post.url}= post.title
+    .blogtagbar
+      Posté par #{post.author} le
+      #{post.date.strftime( '%d/%m/%Y' )}
+      &nbsp;|&nbsp;
+      = page.flattr_compact_counter(:url=>"http://lescastcodeurs.com" + post.url, 
+                                    :title=>post.title, 
+                                    :tags=>'podcast, java') 
     %p
-      %a.btn{ :href=>'http://awestruct.org' } View details &raquo; 
-  .span4
-    %h2 Goal
-    %p The goal of Awestruct is to make it trivially easy to bake out non-trivial static websites. In addition to providing template-driven site creation (using Haml), Awestruct provides facilities for easily priming the site creation with additional non-page data.
-    %p
-      %a.btn{ :href=>'http://awestruct.org' } View details &raquo; 
-  .span4
-    %h2 Concept
-    %p The core concept of Awestruct is that of structures, specifically Ruby OpenStruct structures. The struct aspect allows arbitrary, schema-less data to be associated with a specific page or the entire site.
-    %p
-      %a.btn{ :href=>'http://awestruct.org' } View details &raquo; 
+      ~ post.content
+    .disqus-short
+      = post.disqus_comments_link
+    %hr
+= page.posts.links
