Improve sidebar with hr at top and bottom

--- a/stylesheets/styles.scss
+++ b/stylesheets/styles.scss
@@ -49,6 +49,7 @@ h2 {
   font-size:80%;
   background-color:$grayLighter;
   padding-left: 10px;
+  padding-top:10px;
 
   h1, h2 {
     margin-bottom:.7em;
