Change feed url and add link in meta tags

--- a/_layouts/base.html.haml
+++ b/_layouts/base.html.haml
@@ -6,6 +6,7 @@
       #{site.title}: #{page.title}
     %meta{ :name=>'viewport', :content=>'width=device-width, initial-scale=1.0' }
     %link{ :rel=>'stylesheet', :type=>'text/css', :href=>"/stylesheets/styles.css" }
+    %link{ :href=>'/feed.atom', :rel=>'alternate', :type=>'application/atom+xml'}/
     /[if lt IE 9]
       %script{ :type=>'text/javascript', :src=>'//html5shim.googlecode.com/svn/trunk/html5.js' }
   %body
