Translate 404 page in French

--- a/404.html.haml
+++ b/404.html.haml
@@ -4,8 +4,8 @@ inhibit_indexifier: true
 ---
 #error-404
   :markdown
-    # Oh no!
-  
-    We can't seem to find that page.  Things may have shifted around during
-    shipping, so it might be best to just start back at the [top of the site](/)
-    and poke around for whatever it is you're looking for.
+    # Et c'est le drame!
+ 
+    Apparemment, il n'y a pas de page à cette adresse. Dites nous d'où vous venez et quel
+    est le lien sur lequel vous tombez à commentaire@lescastcodeurs.com histoire que
+    l'on corrige cela vite fait.
