--- a/index.html.haml
+++ b/index.html.haml
@@ -43,5 +43,5 @@ layout: default
       ~ post.content
     .disqus-short
       = post.disqus_comments_link
-    %hr
+    %hr.separator
 = page.posts.links
