Add Arnaud to the home page gist

--- a/index.html.haml
+++ b/index.html.haml
@@ -19,6 +19,9 @@ layout: default
       Emmanuel Bernard 
     (JBoss, Hibernate), 
     %strong
+      Arnaud Héritier 
+    (eXo, Maven),
+    %strong
       Guillaume Laforge 
     (VMWare, Groovy), 
     %strong
