Some graphical design modifications

--- a/_layouts/base.html.haml
+++ b/_layouts/base.html.haml
@@ -24,7 +24,7 @@
               %a{ :href=>"/concept" } Le Concept
             %li
               %a{ :href=>"/parler" } (en) Parler
-    .container
+    .container.content
       ~ content
       %hr
       %footer
