Remove UTF-8 chars from metadata (title generally)

--- a/2009-04-08-le-premier-episode-est-enregistre.html.erb
+++ b/2009-04-08-le-premier-episode-est-enregistre.html.erb
@@ -1,5 +1,5 @@
 ---
-title: 'Le premier épisode est enregistré!'
+title: 'Le premier &eacute;pisode est enregistr&eacute;!'
 author: 'Emmanuel Bernard'
 layout: blog-post
 ---
