--- a/2010-05-07-video-promo-les-cast-codeurs-a-luniversite-du-si-2010.html.erb
+++ b/2010-05-07-video-promo-les-cast-codeurs-a-luniversite-du-si-2010.html.erb
@@ -1,5 +1,5 @@
 ---
-title: 'Video promo Les Cast Codeurs à l&#039;Université du SI 2010'
+title: 'Video promo Les Cast Codeurs &agrave; l&#039;Universit&eacute; du SI 2010'
 author: 'Emmanuel Bernard'
 layout: blog-post
 ---
