--- a/2010-05-26-les-cast-codeurs-podcast-episode-23-interview-dvcs-et-git-jai-vu-la-lumiere-avec-david-gageot-dalgodeal.html.erb
+++ b/2010-05-26-les-cast-codeurs-podcast-episode-23-interview-dvcs-et-git-jai-vu-la-lumiere-avec-david-gageot-dalgodeal.html.erb
@@ -1,5 +1,5 @@
 ---
-title: 'Les Cast Codeurs Podcast - Episode 23 - Interview DVCS et Git j&#039;ai vu la lumière avec David Gageot d&#039;Algodeal'
+title: 'Les Cast Codeurs Podcast - Episode 23 - Interview DVCS et Git j&#039;ai vu la lumi&egrave;re avec David Gageot d&#039;Algodeal'
 author: 'Emmanuel Bernard'
 layout: blog-post
 episode: 23
