--- a/2010-09-09-lepisode-25-usi-2010-en-video-est-arrive.html.erb
+++ b/2010-09-09-lepisode-25-usi-2010-en-video-est-arrive.html.erb
@@ -1,5 +1,5 @@
 ---
-title: 'L&#039;episode 25 (USI 2010) en video est arrivé'
+title: 'L&#039;episode 25 (USI 2010) en video est arriv&eacute;'
 author: 'Emmanuel Bernard'
 layout: blog-post
 episode: 25
