--- a/2012-01-06-les-cast-codeurs-podcast-episode-51-ios-et-le-mobile-avec-jean-francois-grang-premiere-partie.html.erb
+++ b/2012-01-06-les-cast-codeurs-podcast-episode-51-ios-et-le-mobile-avec-jean-francois-grang-premiere-partie.html.erb
@@ -1,5 +1,5 @@
 ---
-title: 'Les Cast Codeurs Podcast - Episode 51 - iOS et le mobile avec Jean-François Grang (premiere partie)'
+title: 'Les Cast Codeurs Podcast - Episode 51 - iOS et le mobile avec Jean-Fran&ccedil;ois Grang (premiere partie)'
 author: 'Emmanuel Bernard'
 layout: blog-post
 episode: 51
