--- a/2012-01-26-les-cast-codeurs-podcast-episode-52-ios-et-le-mobile-avec-jean-francois-grang-deuxieme-partie.html.erb
+++ b/2012-01-26-les-cast-codeurs-podcast-episode-52-ios-et-le-mobile-avec-jean-francois-grang-deuxieme-partie.html.erb
@@ -1,5 +1,5 @@
 ---
-title: 'Les Cast Codeurs Podcast - Episode 52 - iOS et le mobile avec Jean-François Grang (deuxieme partie)'
+title: 'Les Cast Codeurs Podcast - Episode 52 - iOS et le mobile avec Jean-Fran&ccedil;ois Grang (deuxieme partie)'
 author: 'Emmanuel Bernard'
 layout: blog-post
 episode: 52
