Fix title shortening approach for next/previous title

--- a/_layouts/blog-post.html.haml
+++ b/_layouts/blog-post.html.haml
@@ -10,7 +10,7 @@ layout: default
         - if text.size < 25
           = text
         - else
-          = text.split(//).first(25).to_s  << "..."
+          = text[0...25].to_s << "..."
   - if page.next_post
     %li.next
       %a{:href=>page.next_post.url}
@@ -18,7 +18,7 @@ layout: default
         - if text.size < 25
           = text
         - else
-          = text.split(//).first(25).to_s << "..."
+          = text[0...25].to_s << "..."
         &rarr;
   
 %hr
