--- a/2012-04-21-les-cast-codeurs-podcast-episode-57-en-direct-de-devoxx-france-2012.html.erb
+++ b/2012-04-21-les-cast-codeurs-podcast-episode-57-en-direct-de-devoxx-france-2012.html.erb
@@ -10,13 +10,13 @@ mp3_length: 42201457
 <p>Téléchargement de l’épisode <a href='http://traffic.libsyn.com/lescastcodeurs/LesCastCodeurs-Episode-57.mp3'>LesCastCodeurs-Episode–57.mp3</a>
 </p>
 <h2 id='sessionlescastcodeurs'>Session les cast codeurs</h2>
-<a href='http://www.slideshare.net/emmanuelbernard/les-cast-codeurs-devoxx-france-2012'>Les slides de la session Les Cast Codeurs</a>
-<a href='http://atlassian.fr'>Un grand merci à Atlassian pour les bières</a>
-<a href='http://devoxx.fr'>Devoxx France</a>
-<a href='http://devoxx.fr/display/FR12/Agenda'>Agenda</a>
-<a href='http://www.duchess-france.org/'>Duchess France</a>
-<a href='http://www.code-story.net/'>http://www.code-story.net/</a>
-<a href='https://github.com/dgageot/CodeStoryDevoxx'>Le code de l’application Code Story</a>
+<a href='http://www.slideshare.net/emmanuelbernard/les-cast-codeurs-devoxx-france-2012'>Les slides de la session Les Cast Codeurs</a><br/>
+<a href='http://atlassian.fr'>Un grand merci à Atlassian pour les bières</a><br/>
+<a href='http://devoxx.fr'>Devoxx France</a><br/>
+<a href='http://devoxx.fr/display/FR12/Agenda'>Agenda</a><br/>
+<a href='http://www.duchess-france.org/'>Duchess France</a><br/>
+<a href='http://www.code-story.net/'>http://www.code-story.net/</a><br/>
+<a href='https://github.com/dgageot/CodeStoryDevoxx'>Le code de l’application Code Story</a><br/>
 <p>Merci aux polos rouges et à l’année prochaine.
 </p>
 <h2 id='nouscontacter'>Nous contacter</h2>
