Add list of web sponsors in the sidebar

--- a/_layouts/default.html.haml
+++ b/_layouts/default.html.haml
@@ -16,6 +16,11 @@ layout: base
           %img{:src=>'/images/services/itunes.jpg', :width=>'32px', :height=>'32px'}
           Souscrire dans iTunes
       %hr
+      %h2 Sponsors
+      #element.center
+        %a{:href=>'http://blog.soat.fr/category/java/'}
+          %img{:src=>'/images/promo/sponsors/soat-75px.png', :width=>'92px', :height=>'75px'}
+      %hr
       %h2 Contacts
       #element
         %a{:href=>'mailto:commentaire@lescastcodeurs.com'}
