--- a/_layouts/default.html.haml
+++ b/_layouts/default.html.haml
@@ -20,6 +20,9 @@ layout: base
       #element.center
         %a{:href=>'http://blog.soat.fr/category/java/'}
           %img{:src=>'/images/promo/sponsors/soat-75px.png', :width=>'92px', :height=>'75px'}
+      #element.center
+        %a{:href=>'http://www.level5.fr/produits.html'}
+          %img{:src=>'/images/promo/sponsors/nudge-75px.jpg', :width=>'137', :height=>'75px'}
       %hr
       %h2 Contacts
       #element
