Add logo for Sedona

--- a/_layouts/default.html.haml
+++ b/_layouts/default.html.haml
@@ -23,6 +23,9 @@ layout: base
       #element.center
         %a{:href=>'http://www.level5.fr/produits.html'}
           %img{:src=>'/images/promo/sponsors/nudge-75px.jpg', :width=>'137', :height=>'75px'}
+      #element.center
+        %a{:href=>'http://www.sedona.fr'}
+          %img{:src=>'/images/promo/sponsors/sedona-200x75px.png', :width=>'200px', :height=>'75px'}
       %hr
       %h2 Contacts
       #element
