Add Octo as website sponsor

--- a/_layouts/default.html.haml
+++ b/_layouts/default.html.haml
@@ -26,6 +26,9 @@ layout: base
       #element.center
         %a{:href=>'http://www.sedona.fr'}
           %img{:src=>'/images/promo/sponsors/sedona-200x75px.png', :width=>'200px', :height=>'75px'}
+      #element.center
+        %a{:href=>'http://www.octo.com'}
+          %img{:src=>'/images/promo/sponsors/octo-200x75px.png', :width=>'200px', :height=>'75px'}
       %hr
       %h2 Contacts
       #element
