Mise à jour de la tagline d'accueil

--- a/index.html.haml
+++ b/index.html.haml
@@ -5,14 +5,20 @@ layout: default
 .prominent-box
   %h1 Le podcast Java en Français
   %p#tagline
-    Restez informés sur les sujets brûlants de l'industrie 
+    Les Cast Codeurs est un podcast en français 
     %strong
-      Java.
+      de, par et pour les développeurs.
     %br
-    Plongez sur un sujet précis avec l'
+    Prenez connaissance des 
     %strong
-      interview 
-    de l'épisode.
+      dernières snouvelles 
+    de la sphère
+    %strong
+      Java
+    et du développement en général.
+    Plongez sur un sujet précis avec les épisodes
+    %strong
+      interview.
     %br
     Supportez les radotages de vos hôtes : 
     %strong
@@ -30,6 +36,8 @@ layout: default
     %strong
       Vincent Massol 
     (XWiki, Maven).
+    %a{:href=>'/concept/'}
+      En savoir plus...
 %hr
 - for post in page.posts
   .blogpost
