Add CloudBees logo

--- a/_layouts/default.html.haml
+++ b/_layouts/default.html.haml
@@ -18,6 +18,9 @@ layout: base
       %hr
       %h2 Sponsors
       #element.center
+        %a{:href=>'http://www.cloudbees.com'}
+          %img{:src=>'/images/promo/sponsors/cloudbees-112x75px.png', :width=>'112px', :height=>'75px'}
+      #element.center
         %a{:href=>'http://www.octo.com'}
           %img{:src=>'/images/promo/sponsors/octo-200x75px.png', :width=>'200px', :height=>'75px'}
       %hr
