Fix typo in index.html.haml

--- a/index.html.haml
+++ b/index.html.haml
@@ -11,7 +11,7 @@ layout: default
     %br
     Prenez connaissance des 
     %strong
-      dernières snouvelles 
+      dernières nouvelles
     de la sphère
     %strong
       Java
