Convert 2011-01-05-les-cast-codeurs-podcast-episode-33-on-pousse-la-chansonnette.html.erb to Markdown Remove incorrect <strong/> tag in 2011-03-10-les-cast-codeurs-podcast-episode-36-interview-sur-lopen-source-des-par-et-pour-les-cast-codeurs.html.erb

--- a/2011-03-10-les-cast-codeurs-podcast-episode-36-interview-sur-lopen-source-des-par-et-pour-les-cast-codeurs.html.erb
+++ b/2011-03-10-les-cast-codeurs-podcast-episode-36-interview-sur-lopen-source-des-par-et-pour-les-cast-codeurs.html.erb
@@ -36,7 +36,7 @@ mp3_length: 52844280
 <p>LGPL <a href='http://www.gnu.org/licenses/lgpl.html'>http://www.gnu.org/licenses/lgpl.html</a>
 </p>
 <strong>Nous contacter</strong>
-<div><strong/>Contactez-nous via twitter <a href='http://twitter.com/lescastcodeurs'>http://twitter.com/lescastcodeurs</a></div>
+<div>Contactez-nous via twitter <a href='http://twitter.com/lescastcodeurs'>http://twitter.com/lescastcodeurs</a></div>
 <div>
 <div>sur le groupe Google <a href='http://groups.google.com/group/lescastcodeurs'>http://groups.google.com/group/lescastcodeurs</a></div>
 <div>ou sur le site web <a href='http://lescastcodeurs.com/'>http://lescastcodeurs.com/</a></div>
