--- a/_layouts/base.html.haml
+++ b/_layouts/base.html.haml
@@ -11,11 +11,17 @@
       %script{ :type=>'text/javascript', :src=>'//html5shim.googlecode.com/svn/trunk/html5.js' }
     = page.disqus_comments_count
   %body
-    .navbar.navbar-fixed-top
-      .navbar-inner
-        .container
-          %a.brand{ :href=>"/" } Les Cast Codeurs Podcast
-          %ul.nav
+    .navbar.navbar-fixed-top.navbar-inverse{ :role => "navigation" }
+      .container
+        .navbar-header
+          %button.navbar-toggle{ :type => "button", :"data-toggle" => "collapse", :"data-target" => ".navbar-collapse" }
+            %span.sr-only Toggle navigation
+            %span.icon-bar
+            %span.icon-bar
+            %span.icon-bar
+          %a.navbar-brand{ :href=>"/" } Les Cast Codeurs Podcast
+        .collapse.navbar-collapse
+          %ul.nav.navbar-nav
             %li
               %a{ :href=>"/" } Podcasts
             %li
@@ -32,5 +38,7 @@
     -# Uncomment script tags (remove leading -#) when you're ready to use behaviors
     -# %script{ :type=>'text/javascript', :src=>'//cdnjs.cloudflare.com/ajax/libs/jquery/1.7.1/jquery.min.js' }
     -# %script{ :type=>'text/javascript', :src=>"#{site.base_url}/javascripts/bootstrap-collapse.js" }
+    %script{ :src => "https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js" }
+    %script{ :src => "http://maxcdn.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js" }
   = google_analytics
   = page.flattr_javascript
