default.html.haml: replace .span classes by .col-md

--- a/_layouts/default.html.haml
+++ b/_layouts/default.html.haml
@@ -2,9 +2,9 @@
 layout: base
 ---
 .row
-  .span9
+  .col-md-9
     ~ content
-  .span3
+  .col-md-3
     #sidebar
       %h2 Syndication
       #element
