--- a/_layouts/base.html.haml
+++ b/_layouts/base.html.haml
@@ -30,7 +30,7 @@
               %a{ :href=>"/concept" } Le Concept
             %li
               %a{ :href=>"/parler" } (en) Parler
-    .container.content
+    .container-fluid.content
       ~ content
       %hr
       %footer
