--- a/stylesheets/styles.scss
+++ b/stylesheets/styles.scss
@@ -1,9 +1,22 @@
 //$gridColumnWidth:75px;
 
+$font-size-base: 14px;
+$jumbotron-padding: 10px;
+$jumbotron-font-size: ceil(($font-size-base * 1.3));
+
 @import "bootstrap";
 
 body {
   padding-top: 50px;
+}
+
+.jumbotron h1 {
+  margin-top: 10px;
+}
+
+.logo {
+  margin: auto;
+  margin-top: 20px;
 }
 
 /*
