--- a/stylesheets/styles.scss
+++ b/stylesheets/styles.scss
@@ -127,40 +127,27 @@ h2 {
 .center {
   text-align:center;
 }
+*/
 
 .teammember {
-  clear:both;
   margin-bottom: 2em;
 }
 
 .teamheader {
-  margin-bottom: 2em;
+  margin-bottom: 1em;
+
   h2 {
     display:inline;
-    margin-bottom:50px;
+    margin-right: 0.5em;
   }
+
   .teamlinks {
-    display:inline;
-    margin-left:2em;
+    display:inline-block;
+    vertical-align: super;
   }
 }
 
-//Team page
-.teammemberbio {
-  float:left;
-  font-size: 90%;
-  display:inline;
-  ul {
-    list-style-position:inside;
-  }
-}
-
-.teammemberphoto {
-  float:left;
-  margin: 0 20px 20px 0;
-  display:inline;
-}
-
+/*
 //blog
 .blogpost {
   h2 {
