--- a/_layouts/blog-post.html.haml
+++ b/_layouts/blog-post.html.haml
@@ -22,10 +22,10 @@ layout: default
         &rarr;
   
 %hr
-.blogpost
+.blog-post
   %h2
     = page.title
-  .blogtagbar
+  %p.blog-post-meta
     Posté par #{page.author} le
     #{page.date.strftime( '%d/%m/%Y' )}
     &nbsp;|&nbsp;
