--- a/404.html.haml
+++ b/404.html.haml
@@ -3,9 +3,10 @@ layout: default
 inhibit_indexifier: true
 ---
 #error-404
-  :markdown
-    # Et c'est le drame!
- 
+  .page-header
+    %h1 Et c'est le drame!
+
+  %p
     Apparemment, il n'y a pas de page à cette adresse. Dites nous d'où vous venez et quel
     est le lien sur lequel vous tombez à commentaire@lescastcodeurs.com histoire que
     l'on corrige cela vite fait.
