--- a/stylesheets/styles.scss
+++ b/stylesheets/styles.scss
@@ -1,4 +1,7 @@
-//$gridColumnWidth:75px;
+/*
+ * Boostrap SASS variables redefinitions
+ * (see http://getbootstrap.com/customize/#less-variables)
+ */
 
 $font-size-base: 14px;
 $jumbotron-padding: 10px;
@@ -6,129 +9,120 @@ $jumbotron-font-size: ceil(($font-size-base * 1.3));
 
 @import "bootstrap";
 
+/*
+ * Globals
+ */
+
 body {
+  color: #555;
   padding-top: 50px;
   word-wrap: break-word;
 }
 
-.jumbotron h1 {
-  margin-top: 10px;
+img {
+  display: inline-block;
+  max-width: 100%;
+  height: auto;
 }
 
 .logo {
-  margin: auto;
-  margin-top: 20px;
+  float: left;
+  padding: 10px 20px 0 0;
 }
 
-/*
-$primary-color:#997704;
-//$dark-background-color:#2E1B08;
-$dark-background-color:#5E361A;
-
-body {
-  background-color: $dark-background-color;
-  padding-top: 40px;
-  font-family: 'Helvetica Neue', Arial, Helvetica, sans-serif;
-  font-size:100%;
-  p {
-    font-size:100%;
-    line-height:1.15em;
-  }
+h1, .h1,
+h2, .h2,
+h3, .h3,
+h4, .h4,
+h5, .h5,
+h6, .h6 {
+  margin-top: 0;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight: normal;
+  color: #333;
 }
 
-.container.content {
-  background-color: #ffffff;
-  padding: 20px 20px 10px 20px;
-  box-shadow: 0px 0px 8px #000;
-  text-align: justify;
-}
-
-a.brand {
-  margin-left: -15px !important;
-}
-
-.navbar-fixed-top {
-  box-shadow: 0px 0px 4px #000;
-}
-
-hr.separator {
-    height: 2px;
-    background-color: #997704;
-    color: #997704;
-    width: 70%;
-    margin-left:auto;
-    margin-right:auto;
-    margin-top:2em;
-    margin-bottom:2.5em;
-  }
-
-h1, h2, h3 {
-  color: $primary-color;
-  margin-bottom:1em;
-}
-
-h1 {
-  font-size:270%;
-  line-height: 1em;
-}
-
-h2 {
-  margin-top: 1em;
-  line-height: 1em;
-}
-
-.prominent-box {
-  p {
-    font-size:120%;
-  }
-}
-
-  
-#tagline {
-  background-image: url(/images/logo_carre_transparent_150height.png);
-  background-repeat: no-repeat; 
-  height:200px;
-  margin-top: 50px; 
-  padding-left: 160px;
-}
-
-#sidebar {
-  font-size:80%;
-  background: #d5cea6;
-  background: -moz-linear-gradient(-45deg,  #d5cea6 0%, #f7f0cf 100%);
-  background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,#d5cea6), color-stop(100%,#f7f0cf));
-  background: -webkit-linear-gradient(-45deg,  #d5cea6 0%,#f7f0cf 100%);
-  background: -o-linear-gradient(-45deg,  #d5cea6 0%,#f7f0cf 100%);
-  background: -ms-linear-gradient(-45deg,  #d5cea6 0%,#f7f0cf 100%);
-  background: linear-gradient(-45deg,  #d5cea6 0%,#f7f0cf 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d5cea6', endColorstr='#f7f0cf',GradientType=1 );
-
-  padding: 5px;
-  border: solid $primary-color 1px;
-
-  h1, h2 {
-    margin-top:.7em;
-    margin-bottom:.7em;
-    margin-left: .2em;
-  }
-
-  hr {
-    border: $primary-color solid 1px;
-    margin-left: 5px;
-    margin-right: 5px;
-  }
-
-  #element {
-    padding-left:5px;
-    padding-bottom:1em;
+@media (min-width: 1200px) {
+  .container {
+    width: 970px;
   }
 }
 
 .center {
   text-align:center;
 }
-*/
 
+/*
+ * Sidebar
+ */
+.sidebar-module {
+  padding: 15px;
+  margin: 15px -15px 15px;
+  background-color: #f5f5f5;
+  border-radius: 4px;
+}
+
+.sidebar-module-inset p:last-child,
+.sidebar-module-inset ul:last-child,
+.sidebar-module-inset ol:last-child {
+  margin-bottom: 0;
+}
+
+/*
+ * Pagination
+ */
+
+.pagination-links {
+  margin: 20px 0;
+}
+
+.pagination-links * {
+  padding: 10px 16px;
+  font-size: 18px;
+  border: 1px solid #ddd;
+  border-radius: 6px;
+}
+
+.skip {
+  margin-right: 5px;
+}
+
+/*
+ * Blog posts
+ */
+
+.blog-post-title {
+  margin-bottom: 5px;
+}
+
+.blog-post-meta {
+  margin-bottom: 20px;
+  color: #999;
+}
+
+.blog-post-meta iframe {
+  vertical-align: middle;
+}
+
+/*
+ * Footer
+ */
+
+.footer {
+  padding: 20px 0;
+  color: #999;
+  text-align: center;
+  background-color: #f9f9f9;
+  border-top: 1px solid #e5e5e5;
+}
+
+.footer p:last-child {
+  margin-bottom: 0;
+}
+
+/*
+ * Team page
+ */
 .teammember {
   margin-bottom: 2em;
 }
@@ -147,27 +141,10 @@ h2 {
   }
 }
 
-/*
-//blog
-.blogpost {
-  h2 {
-    padding-bottom: 0;
-  }
+.teamphoto {
+  width: 150px;
+  height: 150px;
+  float: left;
+  margin-right: 20px;
+  margin-bottom: 10px;
 }
-.blogtagbar {
-  display: inline;
-    vertical-align: bottom;
-    font-size:90%;
-    color: #555555;
-    a {
-    text-decoration:none;
-  }
-  iframe {
-    position:relative;
-    top:7px;
-  }
-}
-
-// Include responsive Bootstrap styles
-//@import "bootstrap-responsive";
-*/
