Dark-brown navbar + footer Dark-yellow titles

--- a/index.html.haml
+++ b/index.html.haml
@@ -32,7 +32,7 @@ layout: base
     .pull-right
       %a.btn.btn-lg.btn-primary{ :href => '/concept/', :role => "button" } En savoir plus
 
-.container
+.container.content
   .row
     .col-md-9
       - for post in page.posts
