--- a/stylesheets/styles.scss
+++ b/stylesheets/styles.scss
@@ -15,6 +15,7 @@ $navbar-inverse-bg: $dark-brown;
 $jumbotron-padding: 10px;
 $jumbotron-font-size: ceil(($font-size-base * 1.3));
 $jumbotron-heading-color: $title-color;
+$blockquote-font-size: $font-size-base;
 
 @import "bootstrap";
 
