Fix floating of sponsor images

--- a/stylesheets/styles.scss
+++ b/stylesheets/styles.scss
@@ -64,6 +64,15 @@ h6, .h6 {
   padding-top: 20px;
 }
 
+.sponsor {
+  display: inline-block;
+}
+
+.sponsor img {
+  float: left;
+  margin-right: 20px;
+}
+
 /*
  * Sidebar
  */
