--- a/_layouts/base.html.haml
+++ b/_layouts/base.html.haml
@@ -3,7 +3,7 @@
   %head
     %meta{ :charset=>'utf-8' }
     %title 
-      #{site.title}: #{page.title}
+      #{site.title} | #{page.title}
     %meta{ :name=>'viewport', :content=>'width=device-width, initial-scale=1.0' }
     %link{ :rel=>'stylesheet', :type=>'text/css', :href=>"/stylesheets/styles.css" }
     %link{ :href=>'/feed.atom', :rel=>'alternate', :type=>'application/atom+xml'}/
