Add 'episodes' page

--- a/_data/haml_elements/sidebar.html.haml
+++ b/_data/haml_elements/sidebar.html.haml
@@ -1,6 +1,10 @@
 .sidebar-module
   %h2 Syndication
   %p
+    %a{:href=>'/episodes'}
+      %img{:src=>'/images/list_32.png'}
+      Liste des épisodes
+  %p
     %a{:href=>'/podcast-rss'}
       %img{:src=>'/images/services/rss_32.png'}
       Feed
