--- a/episodes.html.haml
+++ b/episodes.html.haml
@@ -8,5 +8,7 @@ layout: default
 - for post in page.posts
   %h4
     %a{:href=>post.url}= post.title
+  / dans la regexp, m veut dire multiligne et u veut dire utf-8
+  / prend le premier paragraphe
   %p= /.*?\n\n/mu.match(post.content)
   %hr
