Upgrade to HTTPS

--- a/_layouts/blog-post.html.haml
+++ b/_layouts/blog-post.html.haml
@@ -29,7 +29,7 @@ layout: default
     Posté par #{page.author} le
     #{page.date.strftime( '%d/%m/%Y' )}
     &nbsp;|&nbsp;
-    = page.flattr_compact_counter(:url=>"http://lescastcodeurs.com" + page.url, 
+    = page.flattr_compact_counter(:url=>"https://lescastcodeurs.com" + page.url, 
                                   :title=>page.title, 
                                   :tags=>'podcast, java') 
   %p
