--- a/equipe.html.haml
+++ b/equipe.html.haml
@@ -24,5 +24,5 @@ layout: default
             %img{:src=>'/images/services/twitter_32.png'}
             Twitter
     %p
-      %img.teamphoto{:src=>"http://www.gravatar.com/avatar/#{member.gravatar_hash}?s=150"}
+      %img.teamphoto{:src=>"https://www.gravatar.com/avatar/#{member.gravatar_hash}?s=150"}
       #{member.content}
