--- a/_data/haml_elements/sidebar.html.haml
+++ b/_data/haml_elements/sidebar.html.haml
@@ -9,13 +9,13 @@
       %img{:src=>'/images/services/rss_32.png'}
       Feed
   %p
-    %a{:href=>'http://itunes.apple.com/WebObjects/MZStore.woa/wa/viewPodcast?id=312239675'}
+    %a{:href=>'https://itunes.apple.com/WebObjects/MZStore.woa/wa/viewPodcast?id=312239675'}
       %img{:src=>'/images/services/itunes.jpg', :width=>'32px', :height=>'32px'}
       Souscrire dans iTunes
 
 .sidebar-module
   %h2 Sponsors
-  %a{:href=>'http://www.cloudbees.com'}
+  %a{:href=>'https://www.cloudbees.com'}
     %img{:src=>'/images/promo/sponsors/cloudbees-112x75px.png', :width=>'112px', :height=>'75px'}
 
 .sidebar-module
@@ -25,17 +25,17 @@
       %img{:src=>'/images/services/email_32.png'}
       Mail
   %p
-    %a{:href=>'http://twitter.com/lescastcodeurs'}
+    %a{:href=>'https://twitter.com/lescastcodeurs'}
       %img{:src=>'/images/services/twitter_32.png'}
       @lescastcodeurs
 
 .sidebar-module
   %h2 Discuter
   %p
-    %a{:href=>'http://groups.google.com/group/lescastcodeurs'}
+    %a{:href=>'https://groups.google.com/group/lescastcodeurs'}
       %img{:src=>'/images/services/google_groups.png', :width=>'32px', :height=>'32px'}
       Joindre le Google group
 
 .sidebar-module
   %h2 Aimer
-  <iframe src="http://api.flattr.com/button/view/?uid=epbernard&amp;category=text&amp;url=http%3A%2F%2Flescastcodeurs.com%2F&amp;title=Les%20Cast%20Codeurs%20Podcast&amp;tags=lescastcodeurs%2Cpodcast%2Cjava&amp;" class="FlattrButton" width="55" height="62" frameborder="0" scrolling="no" title="Flattr" border="0" marginheight="0" marginwidth="0" allowtransparency="true"></iframe>
+  <iframe src="https://api.flattr.com/button/view/?uid=epbernard&amp;category=text&amp;url=http%3A%2F%2Flescastcodeurs.com%2F&amp;title=Les%20Cast%20Codeurs%20Podcast&amp;tags=lescastcodeurs%2Cpodcast%2Cjava&amp;" class="FlattrButton" width="55" height="62" frameborder="0" scrolling="no" title="Flattr" border="0" marginheight="0" marginwidth="0" allowtransparency="true"></iframe>
