--- a/_layouts/base.html.haml
+++ b/_layouts/base.html.haml
@@ -40,6 +40,6 @@
     -# %script{ :type=>'text/javascript', :src=>'//cdnjs.cloudflare.com/ajax/libs/jquery/1.7.1/jquery.min.js' }
     -# %script{ :type=>'text/javascript', :src=>"#{site.base_url}/javascripts/bootstrap-collapse.js" }
     %script{ :src => "https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js" }
-    %script{ :src => "http://maxcdn.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js" }
+    %script{ :src => "https://maxcdn.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js" }
   = google_analytics_universal
   = page.flattr_javascript
