Mise à jour des bios
Mise à jour des bios de nos amis @glaforge et @aheritier.

--- a/index.html.haml
+++ b/index.html.haml
@@ -22,9 +22,9 @@ layout: base
       %strong Emmanuel Bernard
       (JBoss, Hibernate),
       %strong Arnaud Héritier
-      (eXo, Maven),
+      (CloudBees, Maven),
       %strong Guillaume Laforge
-      (VMWare, Groovy),
+      (Restlet, Groovy),
       %strong Antonio Goncalves
       (freelance, auteur),
       %strong Vincent Massol
