--- a/index.html.haml
+++ b/index.html.haml
@@ -24,7 +24,7 @@ layout: base
       %strong Arnaud Héritier
       (CloudBees, Maven),
       %strong Guillaume Laforge
-      (Restlet, Groovy),
+      (Google, Groovy),
       %strong Antonio Goncalves
       (freelance, auteur),
       %strong Vincent Massol
