s/Maven/Jenkins in my profile

--- a/index.html.haml
+++ b/index.html.haml
@@ -22,7 +22,7 @@ layout: base
       %strong Emmanuel Bernard
       (JBoss, Hibernate),
       %strong Arnaud Héritier
-      (CloudBees, Maven),
+      (CloudBees, Jenkins),
       %strong Guillaume Laforge
       (Google, Groovy),
       %strong Antonio Goncalves
