Add the Crowdcasting page in the top menu

--- a/_layouts/base.html.haml
+++ b/_layouts/base.html.haml
@@ -29,6 +29,8 @@
             %li
               %a{ :href=>"/concept" } Le Concept
             %li
+              %a{ :href=>"/crowdcasting" } Crowdcasting
+            %li
               %a{ :href=>"/parler" } (en) Parler
 
     ~ content
