add Audrey's profile

--- a/index.html.haml
+++ b/index.html.haml
@@ -28,7 +28,9 @@ layout: base
       %strong Antonio Goncalves
       (freelance, auteur),
       %strong Vincent Massol
-      (XWiki, Maven).
+      (XWiki, Maven),
+      %strong Audrey Neveu
+      (Streamdata.io, Devoxx4Kids).
     .pull-right
       %a.btn.btn-lg.btn-primary{ :href => '/concept/', :role => "button" } En savoir plus
 
