Ajouter licence CC-NC-ND-4.0

--- a/_data/haml_elements/sidebar.html.haml
+++ b/_data/haml_elements/sidebar.html.haml
@@ -12,6 +12,10 @@
     %a{:href=>'https://itunes.apple.com/WebObjects/MZStore.woa/wa/viewPodcast?id=312239675'}
       %img{:src=>'/images/services/itunes.jpg', :width=>'32px', :height=>'32px'}
       Souscrire dans iTunes
+  %p
+    %a{:href=>'/licence/'}
+      %img{:src=>'/images/services/share_32.png'}
+      Licence
 
 .sidebar-module
   %h2 Sponsors
