--- a/index.html.haml
+++ b/index.html.haml
@@ -30,7 +30,7 @@ layout: base
       %strong Vincent Massol
       (XWiki, Maven),
       %strong Audrey Neveu
-      (Streamdata.io, Devoxx4Kids).
+      (Saagie, Devoxx4Kids).
     .pull-right
       %a.btn.btn-lg.btn-primary{ :href => '/concept/', :role => "button" } En savoir plus
 
