Move CDN to https

--- a/_ext/template.atom.haml
+++ b/_ext/template.atom.haml
@@ -27,7 +27,7 @@
         %link{:rel=>"alternate", :type=>"text/html", :href=>"#{site.base_url}#{entry.url}" }
         - if ( entry.episode )
           %link{:rel=>"enclosure", :type=>"audio/mpeg", :length=>"#{entry.mp3_length}", |
-            :href=>"http://traffic.libsyn.com/lescastcodeurs/LesCastCodeurs-Episode-#{entry.episode}.mp3" }
+            :href=>"https://traffic.libsyn.com/lescastcodeurs/LesCastCodeurs-Episode-#{entry.episode}.mp3" }
         - if ( entry.author )
           %author
             - if ( defined?( entry.author.name ) )
