Add link to crowdcasting tool

--- a/_data/haml_elements/sidebar.html.haml
+++ b/_data/haml_elements/sidebar.html.haml
@@ -32,6 +32,10 @@
     %a{:href=>'https://twitter.com/lescastcodeurs'}
       %img{:src=>'/images/services/twitter_32.png'}
       @lescastcodeurs
+  %p
+    %a{:href=>'https://usercast.listeningfrog.com/u/lescastcodeurs'}
+      %img{:src=>'/images/services/web_32.png'}
+      Crowdcast
 
 .sidebar-module
   %h2 Discuter
