Comment out the sponsor sidebar section

--- a/_data/haml_elements/sidebar.html.haml
+++ b/_data/haml_elements/sidebar.html.haml
@@ -17,11 +17,11 @@
       %img{:src=>'/images/services/share_32.png'}
       Licence
 
-.sidebar-module
-  %h2 Sponsors
-  %a{:href=>'https://www.cloudbees.com'}
-    %img{:src=>'/images/promo/sponsors/cloudbees-112x75px.png', :width=>'112px', :height=>'75px'}
-
+-#.sidebar-module
+-#  %h2 Sponsors
+-#  %a{:href=>'https://www.cloudbees.com'}
+-#    %img{:src=>'/images/promo/sponsors/cloudbees-112x75px.png', :width=>'112px', :height=>'75px'}
+-#
 .sidebar-module
   %h2 Contacts
   %p
